--- a/bin/main/templates/subcategory-template.html
+++ b/bin/main/templates/subcategory-template.html
@@ -4,20 +4,23 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link href="/layout.css" rel="stylesheet"/>
+    <link href="/layout.css"  rel="stylesheet"/>
     <link href="/style.css" rel="stylesheet"/>
 
-    <title>Hashtags</title>
+    <title>My Blog</title>
 </head>
 <header>
-    <h2 th:text="${tag.name}">
-    </h2>
+    <h1 th:text="${category.name}">
+</h1>
 </header>
 <body>
-<li class="tags" href th:each="post : ${tag.posts}">
-    <a th:text="${post.title}" th:href="@{'/posts/'+${post.title}}">
-    </a>
-</li>
+<main>
+<ul>
+    <li th:each="post: ${category.posts}">
+    <a  th:text= "${post.title}" th:href="@{'/posts/'+${post.title}}"></a>
+    </li>
+    </ul>
+</main>
 </body>
 <footer><a href="/categories">Back To Home</a>
 </footer>
