--- a/src/main/resources/templates/author-template.html
+++ b/src/main/resources/templates/author-template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">>
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Authors</title>
@@ -11,6 +11,9 @@
     </h2>
 </header>
 <body>
-
+<li th:each="post : ${author.posts}">
+    <a th:text="${post.title}" th:href="@{'/posts/'+${post.title}}">
+    </a>
+</li>
 </body>
 </html>
