users can add tags to reviews

--- a/src/main/resources/templates/post-template.html
+++ b/src/main/resources/templates/post-template.html
@@ -27,6 +27,12 @@
     <a th:text="${tag.name}" th:href="@{'/hashtags/'+${tag.id}}" >
     </a>
 </li>
+<form action="/hashtags/add" method="POST" class="hashtag-input">
+    <label for="new-hashtags__name-input"></label>
+    <input type="text" name="hashtagName" id="new-hashtags__name-input" placeholder="Enter A New Hashtag">
+    <input type="hidden" name="title" th:value="${post.title}">
+    <button type="submit">Submit</button>
+</form>
 </body>
 <footer>
     <a href="/categories">Back To Home</a>
