Made templates for all authors and all tags, can add new authors and tags

--- a/src/main/resources/templates/category-template.html
+++ b/src/main/resources/templates/category-template.html
@@ -18,6 +18,9 @@
         <a th:text= "${category.name}" th:href="@{'/categories/'+${category.name}}"></a>
     </li>
 </ul>
+    <a th:href="@{'hashtags'}">See All Tags Here</a>
+    <br>
+    <a th:href="@{'authors'}">See All Authors Here</a>
 </main>
 </body>
 </html>
