--- a/src/main/resources/templates/allauthors-template.html
+++ b/src/main/resources/templates/allauthors-template.html
@@ -4,8 +4,11 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <link href="/layout.css" rel="stylesheet"/>
+    <link href="/style.css" rel="stylesheet"/>
     <title>Authors</title>
 </head>
+<div class="container">
 <header><h1>All Authors</h1></header>
 <body>
 <ul>
@@ -19,7 +22,7 @@
     <input type="hidden" name="author" th:value="${authorName}">
     <button type="submit">Submit</button>
 </form>
-
 </body>
 <footer>    <a href="/categories">Back To Home</a></footer>
+</div>
 </html>
