--- a/src/main/resources/templates/author-template.html
+++ b/src/main/resources/templates/author-template.html
@@ -4,8 +4,11 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <link href="/layout.css" rel="stylesheet"/>
+    <link href="/style.css" rel="stylesheet"/>
     <title>Authors</title>
 </head>
+<div class="container">
 <header>
     <h2 th:text="${author.name}">
     </h2>
@@ -17,4 +20,5 @@
 </li>
 </body>
 <footer>    <a href="/categories">Back To Home</a></footer>
+</div>
 </html>
