--- a/src/main/resources/templates/subcategory-template.html
+++ b/src/main/resources/templates/subcategory-template.html
@@ -9,6 +9,7 @@
 
     <title>My Blog</title>
 </head>
+<div class="container">
 <header>
     <h1 th:text="${category.name}">
 </h1>
@@ -22,22 +23,30 @@
     </ul>
 
     <p>Add a new post here:</p>
+    <div class="item"></div>
+        <form action="/post/add" method="POST">
+            <div>
     <label for="authors">Choose an author:</label>
-    <form action="/post/add" method="POST">
     <select name="authors" id="authors" required>
         <option th:each="author: ${authors}"
                 th:value="${author.name}" th:text="${author.name}"></option>
     </select>
-    <label for="tags">Choose a tag:</label>
-    <select name="tags" id="tags" required>
-        <option th:each="tag: ${tags}"
-                th:value="${tag.name}" th:text="${tag.name}">
-        </option>
-    </select>
-        <label for="new-post__name-input"></label>
+            </div>
+            <div class="item"></div>
+            <div>
         <input type="text" name="title" id="new-post__name-input" placeholder="Enter post title">
-        <label for="new-post__description-input"></label>
-        <input type="text" name="body" id="new-post__description-input" placeholder="Enter content here">
+            </div>
+            <div class="item"></div>
+            <div>
+        <input type="text" name="body" id="new-post__description-input" placeholder="Enter content here" class="text-box">
+            </div>
+            <div class="item"></div>
+            <label for="tags">Choose a tag:</label>
+            <select name="tags" id="tags" required>
+                <option th:each="tag: ${tags}"
+                        th:value="${tag.name}" th:text="${tag.name}">
+                </option>
+            </select>
         <input type="hidden" name="categoryName" th:value="${category.name}">
         <button type="submit">Submit</button>
     </form>
@@ -45,4 +54,5 @@
 </body>
 <footer><a href="/categories">Back To Home</a>
 </footer>
+</div>
 </html>
