--- a/src/main/resources/templates/tag-template.html
+++ b/src/main/resources/templates/tag-template.html
@@ -9,16 +9,20 @@
 
     <title>Hashtags</title>
 </head>
+<div class="container">
 <header>
     <h2 th:text="${tag.name}">
     </h2>
 </header>
+<div class="tags">
 <body>
 <li th:each="post : ${tag.posts}">
     <a th:text="${post.title}" th:href="@{'/posts/'+${post.title}}">
     </a>
 </li>
+</div>
 </body>
 <footer><a href="/categories">Back To Home</a>
 </footer>
+</div>
 </html>
